# suno-daw

./: .gitignore  CMakeLists.txt  DESIGN.md  LICENSE  README.md
.github/workflows/: build-and-release.yml
SunoClient/: SunoClient.hpp  SunoClientLinux.cpp  SunoClientMac.mm  SunoClientWin.cpp
plugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: build-installer-pkg.sh
